[package]
name = "crmps-v4"
version = "0.1.0"
authors = ["Abdul-Muiz-Iqbal <parkermuiz0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
glob = "0.3.0"
quick-error = "2.0.0"
rayon = "1.5.0"
regex = "1.4.3"
structopt = "0.3.21"
toml = "0.5.8"
